# emc-analyzer

./: .gitignore  Dockerfile  MIME-TYPE-FIX.md  PROJECT_STRUCTURE.md  README-DEPLOY.md  README.html  README.md  REORGANIZATION_COMPLETE.md  VERCEL-FIX.md  app.vue  build.sh  index.html  nuxt.config.ts  package-lock.json  package.json  vercel.json  vite.config.ts  vitest.config.ts
components/: DemoCard.vue  EMCChart.vue  EMCFileUpload.vue  EMCStandardLoader.vue  NavigationMenu.vue  ResultsTable.vue  WasmDebugPanel.vue
composables/: useWasm.ts
demos/: pure-vue-wasm-test.html  simple-wasm-test.html  test.html  vue-emc-prototype.html  vue-emc-wasm-demo.html
docs/: EMC_TEST_DATA_README.md  JSON-VALIDATION.md
emc-analysis/: .gitignore  README.md  emc_spectrum_analysis.ipynb  emc_txt_reader.py  requirements.txt
layouts/: default.vue
notebooks/: emc_validation.ipynb
pages/: index.vue  integration-test.vue  success.vue  test-components.vue  test-wasm.vue
public/: 250128_OBC758_1_OP1_HVneg.TXT  emc-standards-fixed.json  emc-standards.json  pure-vue-wasm-test.html  sample-measurement.csv  sample-measurement.txt  test-3col-violations.csv  test_violation_long.csv  vue-emc-prototype.html  vue-emc-wasm-demo.html
python/: 20231122_emc.ipynb  limits.py
schemas/: emc-standards.schema.json
scripts/: validate-json.js
src/: App.vue  main.ts
stores/: emc.ts
tests/: emc-standards.test.js  (+1 more)
wasm/: Cargo.toml  FREQUENCY_EXPRESSIONS.html  FREQUENCY_EXPRESSIONS.md  emc_standards.json
wasm/src/: frequency_helpers.rs  lib.rs  lib_clean.rs  lib_old.rs  test_standalone.rs
(+25 files in other folders)
